# cg-project-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml
app/: CMakeLists.txt
app/includes/config/: settings.h
app/includes/core/: camera.h  file.h  shader.h
app/includes/models/: parser.h  shape.h
app/src/: main.cpp
app/src/core/: camera.cpp  file.cpp  shader.cpp
app/src/models/: parser.cpp  shape.cpp
resources/shaders/: basic-vertex.glsl  gouraud-frag.glsl  light-frag.glsl  projection-vert.glsl
vendors/: CMakeLists.txt
